--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "passport-local": "*"
   },
   "devDependencies": {
+    "handlebars": "^4.0.6",
+    "handlebars-form-helpers": "^0.1.3",
     "serve-favicon": "^2.4.1"
   }
 }
